Don't hide list-fade on mobile if actionbar is visible. Fixes #150

--- a/app/styles/module/_todo-list.scss
+++ b/app/styles/module/_todo-list.scss
@@ -43,4 +43,5 @@
 
 .action-bar:not(.fadeout) + .list-fade {
 	@include background-image( linear-gradient( rgba(white, 0), white 35% ) );
+	display: block !important;
 }
